fixed issue with footer not aligning text center.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -72,10 +72,13 @@ body > footer
 	background-color: #fff;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1) inset, 0 1px 0 0 rgba(0, 0, 0, 0.1) inset;
 	color: #232323;
-	justify-content: space-around;
 	min-height: 5rem;
 	text-align: center;
 }
+	body > footer > .foot
+	{
+		justify-content: space-around;
+	}
 
 body > main
 {
